refactor: board image entity one to many bidirectional relationship change value object in board